# ra

./: .vimrc  BUILD.bazel  WORKSPACE.bazel  create.sh  ra.bzl  rebar.config
.github/workflows/: erlang.yml
mytest/: dynamic_change.erl  form_cluster.erl  query.erl
src/: ra.erl
test/: Makefile  Makefile.1  Makefile.2  ReadMe.txt
