load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_erlang",
    strip_prefix = "rules_erlang-2",
    urls = ["https://github.com/rabbitmq/rules_erlang/archive/refs/heads/v2.zip"],
)

load("@rules_erlang//:rules_erlang.bzl", "rules_erlang_dependencies")

rules_erlang_dependencies()

load("@rules_erlang//:github.bzl", "github_erlang_app")
load("@rules_erlang//:hex_pm.bzl", "hex_pm_erlang_app")

hex_pm_erlang_app(
    name = "aten",
    sha256 = "8b623c8be27b59a911d16ab0af41777b504c147bc0d60a29015fab58321c04b0",
    version = "0.5.7",
)

hex_pm_erlang_app(
    name = "gen_batch_server",
    sha256 = "ff6b0ed0f7be945f38b94ddd4784d128f35ff029c34dad6ca0c6cb17ab7bc9c4",
    version = "0.8.4",
)

http_archive(
    name = "inet_tcp_proxy",
    build_file_content = """load("@rules_erlang//:erlang_app.bzl", "erlang_app")
erlang_app(
    app_name = "inet_tcp_proxy_dist",
    app_version = "0.1.0",
    app_description = "Erlang distribution proxy to simulate network failures",
    app_module = "inet_tcp_proxy_dist_app",
)
""",
    strip_prefix = "inet_tcp_proxy-master",
    urls = ["https://github.com/rabbitmq/inet_tcp_proxy/archive/master.zip"],
)

github_erlang_app(
    name = "meck",
    org = "eproxus",
)

github_erlang_app(
    name = "proper",
    first_srcs = [
        "src/vararg.erl",
        "src/proper_target.erl",
    ],
    org = "manopapad",
)
